AUTO-916 ie 8 fixes for resizing and the messages scrollbar

--- a/src/css/grabpress.css
+++ b/src/css/grabpress.css
@@ -1094,7 +1094,7 @@ line-height: 24px;
 
 #t #b .feeds h3 {
     font: 18px 'Gill Sans W01 Light', Arial;
-    padding: 15px;
+    padding: 15px 0px;
     color: #000;
 }
 #form-dashboard #message{
@@ -1103,7 +1103,7 @@ line-height: 24px;
 #form-dashboard .feeds a#help{
     float: right;
     margin-top: -47px;
-    padding: 15px;
+    padding: 15px 0px;
     text-decoration: underline !important;
 }
 /* Dashboard right-pane fixed position */
